Changelog
=========


2.8.2 (unreleased)
------------------

- Use a SavepointIterator in the WorkflowSecurityUpdater in order not to exceed
  memory. [mbaechtold]


2.8.1 (2017-10-13)
------------------

- Also catch AttributeErrors when accessing objects of broken brains. [buchi]


2.8.0 (2017-07-27)
------------------

- The upgrade step methods will remove and skip broken catalog brains. [jone]


2.7.2 (2017-07-13)
------------------

- Fix encoding issues in ASCII terminals. [jone]


2.7.1 (2017-06-28)
------------------

- Fix tempfile authentication when created by different user. [jone]


2.7.0 (2017-06-28)
------------------

- Support using ``bin/upgrade`` by another user than the Zope server
  with less strict security checks.[jone]


2.6.1 (2017-06-28)
------------------

- Fix a bug which caused ``bin/upgrade`` to fail when the ``var`` directory
  had the setguid flag active. [jone]


2.6.0 (2017-06-08)
------------------

- Log (re/un)-indexing progress if collective.indexing is installed. [deiferni]


2.5.0 (2017-06-07)
------------------

- Add support for Plone 5.1. [jone]


2.4.0 (2017-06-07)
------------------

- Escape < and > in browser logger. [lknoepfel]

- Log current item in ProcessLogger if logger exits unexpectedly. [lknoepfel]


2.3.1 (2017-02-15)
------------------

- Fix bug causing that versions are not properly set after upgrading
  when switching versioning system. [jone]

- Avoid overriding customizations by reinstalling already installed
  profiles while upgrading (Plone>=4.3.8). [jone]


2.3.0 (2017-02-14)
------------------

- InplaceMigrator: Preserve object position in parent. [lknoepfel]

- Do not downgrade installed version when installing an orphan upgrade step. [jone]

- Add "soft_dependencies" option to "upgrade-step:directory" directive. [jone]


2.2.0 (2017-01-30)
------------------

- Add method to remove a previously uninstalled portlet manager from the
  persistent registry.
  [deiferni]


2.1.1 (2016-12-13)