@@ -5,6 +5,7 @@ Changelog
 2.8.2 (unreleased)
 ------------------
 
+- Reduce memory footprint in SavepointIterator by minimizing connection cache. [jone]
 - Use a SavepointIterator in the WorkflowSecurityUpdater in order not to exceed
   memory. [mbaechtold]
 
